--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2380,7 +2380,7 @@ div.jp-audio{
     max-width: 100%!important;
     z-index: 1400 !important;
 }
-@media only screen and (max-width: 1000px){
+@media only screen and (min-width: 1000px){
 	.scrollingTitle{
 		padding-left: 9!important;
 	}
