--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -733,7 +733,7 @@ ul.masonry{
     margin: auto;
     // max-width: 1580px;
     // min-width: 940px;
-    padding: 20px 0 40px 17px; //left 16px
+    padding: 20px 0 16px 17px;
     height:20px;
     margin-top: 24px;
 }
