--- a/sites/all/themes/ukabbalah/sass/_tooltipster.scss
+++ b/sites/all/themes/ukabbalah/sass/_tooltipster.scss
@@ -300,8 +300,7 @@ a.close-tip{
 	font-size: 16px;
 }
 .tooltipster-base.tooltipster-default.tooltipster-fade.tooltipster-fade-show {
-    left: 33% !important;
-    top: 25%!important;
+    left: 162px !important;
 }
 @media (max-width: 1000px){
 	.tooltipster-base.tooltipster-default.tooltipster-fade.tooltipster-fade-show {
