--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -1,7 +1,7 @@
 @charset "IBM437";
-/* line 386, icon/*.png */
-.icon-sprite, .imgNav li, .imgNav li.activeNav, #goRight, #goLeft, .icon-twitter, .icon-testimonial, .buttonMember, .resourceFile, .vidImg, .Videos, .theDescCont .Video, .Premium, .audioImg, .Audios, .theDescCont .Audio, .bothAdVdImg {
-  background: url('../images/icon-s566a1c693a.png') no-repeat;
+/* line 394, icon/*.png */
+.icon-sprite, .imgNav li, .imgNav li.activeNav, #goRight, #goLeft, .icon-twitter, .icon-testimonial, .buttonMember, .resourceFile, .lessonCollectionSection .Audio, .vidImg, .Videos, .theDescCont .Video, .Premium, .audioImg, .Audios, .theDescCont .Audio, .bothAdVdImg {
+  background: url('../images/icon-s48ff81feaf.png') no-repeat;
 }
 
 @font-face {
@@ -2777,13 +2777,13 @@ div.jp-audio {
 
 /* line 2136, ../sass/style.scss */
 .lessonCollectionSection .Audio {
-  background: url("http://cdn1.kabbalah.com/kabbalah.com/icons/audio_icon.png") no-repeat 8px 0;
+  background-position: 0 -1348px;
   height: 13px;
   width: 25px;
 }
 
 /**grid display***/
-/* line 2143, ../sass/style.scss */
+/* line 2144, ../sass/style.scss */
 #mainContentWrapper, #courseByParentWrapper {
   clear: both;
   margin: auto;
@@ -2792,7 +2792,7 @@ div.jp-audio {
   padding: 0 10px 40px;
 }
 
-/* line 2150, ../sass/style.scss */
+/* line 2151, ../sass/style.scss */
 .topicwrapper {
   float: left;
   cursor: pointer;
@@ -2801,12 +2801,12 @@ div.jp-audio {
   height: 170px;
 }
 
-/* line 2157, ../sass/style.scss */
+/* line 2158, ../sass/style.scss */
 .topicItemTitle {
   margin: 0 10px;
 }
 
-/* line 2160, ../sass/style.scss */
+/* line 2161, ../sass/style.scss */
 .topicItemTitle a {
   color: #433a3a !important;
   font-size: 15px;
@@ -2818,14 +2818,14 @@ div.jp-audio {
   -webkit-font-smoothing: antialiased;
 }
 
-/* line 2170, ../sass/style.scss */
+/* line 2171, ../sass/style.scss */
 .topicTermnDate {
   font-size: 12px;
   margin: 0 10px;
   padding-bottom: 10px;
 }
 
-/* line 2175, ../sass/style.scss */
+/* line 2176, ../sass/style.scss */
 .topicItemText {
   color: #433a3a !important;
   display: block;
@@ -2835,13 +2835,13 @@ div.jp-audio {
   text-align: left;
 }
 
-/* line 2183, ../sass/style.scss */
+/* line 2184, ../sass/style.scss */
 .topicItemText span a {
   text-transform: capitalize;
   color: #127795;
 }
 
-/* line 2188, ../sass/style.scss */
+/* line 2189, ../sass/style.scss */
 #mainContentWrapper h1#page-title,
 #courseByParentWrapper h1#page-title {
   margin-top: 47px;
@@ -2849,7 +2849,7 @@ div.jp-audio {
   float: none;
 }
 
-/* line 2193, ../sass/style.scss */
+/* line 2194, ../sass/style.scss */
 .topicItemImage a {
   height: auto !important;
   text-decoration: none !important;
@@ -2857,7 +2857,7 @@ div.jp-audio {
   width: 300px;
 }
 
-/* line 2199, ../sass/style.scss */
+/* line 2200, ../sass/style.scss */
 .topicItemImage img {
   float: left;
   height: 170px;
@@ -2865,7 +2865,7 @@ div.jp-audio {
   z-index: -10;
 }
 
-/* line 2205, ../sass/style.scss */
+/* line 2206, ../sass/style.scss */
 .topicTextWrapper {
   background: url("../images/sliding_white_bg_3.png") repeat-x scroll 0 0 rgba(0, 0, 0, 0);
   float: left;
@@ -2874,12 +2874,12 @@ div.jp-audio {
   width: 300px;
 }
 
-/* line 2212, ../sass/style.scss */
+/* line 2213, ../sass/style.scss */
 .sticky-header {
   display: none !important;
 }
 
-/* line 2215, ../sass/style.scss */
+/* line 2216, ../sass/style.scss */
 #list img, #grid img {
   float: left;
   height: 16px;
@@ -2888,18 +2888,18 @@ div.jp-audio {
 }
 
 /**home page**/
-/* line 2224, ../sass/style.scss */
+/* line 2225, ../sass/style.scss */
 #carousal1Wrapper, #carousal2Wrapper, #carousal3Wrapper, #carousal4Wrapper {
   float: left;
   width: 100%;
 }
 
-/* line 2234, ../sass/style.scss */
+/* line 2235, ../sass/style.scss */
 #carousal4Wrapper {
   margin-bottom: 40px;
 }
 
-/* line 2241, ../sass/style.scss */
+/* line 2242, ../sass/style.scss */
 #block-ukabbalah-fp-carousals-carousal1 > h2,
 #block-ukabbalah-fp-carousals-carousal2 > h2,
 #block-ukabbalah-fp-carousals-carousal3 > h2,
@@ -2909,87 +2909,87 @@ div.jp-audio {
   color: #999;
 }
 
-/* line 2246, ../sass/style.scss */
+/* line 2247, ../sass/style.scss */
 .carrouselFix {
   margin-left: 10px;
   margin-bottom: 0;
 }
 
-/* line 2250, ../sass/style.scss */
+/* line 2251, ../sass/style.scss */
 .vidImg, .Videos, .theDescCont .Video, .Premium, .audioImg, .Audios, .theDescCont .Audio, .bothAdVdImg {
   height: 13px;
   width: 16px;
   float: left;
   margin-right: 7px;
   margin-top: 1px;
-  background-position: 0 -1421px;
+  background-position: 0 -1434px;
 }
 
-/* line 2264, ../sass/style.scss */
+/* line 2265, ../sass/style.scss */
 .Premium {
-  background-position: 0 -1442px;
+  background-position: 0 -1455px;
   width: 11px;
   float: right;
 }
 
-/* line 2270, ../sass/style.scss */
+/* line 2271, ../sass/style.scss */
 .audioImg, .Audios, .theDescCont .Audio {
-  background-position: 0 -1348px;
+  background-position: 0 -1361px;
 }
 
-/* line 2280, ../sass/style.scss */
+/* line 2281, ../sass/style.scss */
 .bothAdVdImg {
   background-position: 0 -309px;
   width: 35px;
 }
 
-/* line 2285, ../sass/style.scss */
+/* line 2286, ../sass/style.scss */
 .theTitle, .titleWrapper {
   float: left;
   margin-left: 10px;
   margin-top: 10px;
 }
 
-/* line 2290, ../sass/style.scss */
+/* line 2291, ../sass/style.scss */
 .teachersPath, .readMore {
   color: #127795;
   margin-left: 5px;
 }
 
-/* line 2294, ../sass/style.scss */
+/* line 2295, ../sass/style.scss */
 .rightArrowStyleHome {
   position: relative;
 }
 
 /***/
-/* line 2299, ../sass/style.scss */
+/* line 2300, ../sass/style.scss */
 #teachingsSectionHeaderBar .lessonsCourse {
   display: block;
 }
 
-/* line 2302, ../sass/style.scss */
+/* line 2303, ../sass/style.scss */
 #authorDDWrapper, #topicDDWrapper {
   float: left;
 }
 
-/* line 2305, ../sass/style.scss */
+/* line 2306, ../sass/style.scss */
 #teachings_teachersDD, #teachings_topicDD {
   cursor: pointer;
   height: 29px;
 }
 
-/* line 2309, ../sass/style.scss */
+/* line 2310, ../sass/style.scss */
 .preVideoImg {
   width: 940px;
   margin: 20px auto auto;
 }
 
-/* line 2313, ../sass/style.scss */
+/* line 2314, ../sass/style.scss */
 .preVideoImg img {
   float: left;
 }
 
-/* line 2316, ../sass/style.scss */
+/* line 2317, ../sass/style.scss */
 .preVideoImg .videotitles {
   float: right;
   width: 290px;
@@ -2998,7 +2998,7 @@ div.jp-audio {
   margin-top: 0;
 }
 
-/* line 2328, ../sass/style.scss */
+/* line 2329, ../sass/style.scss */
 .preVideoImg #titleMultimedia,
 .preVideoImg #courseNameMultimedia,
 .preVideoImg #pipe,
@@ -3010,64 +3010,64 @@ div.jp-audio {
   color: white;
 }
 
-/* line 2331, ../sass/style.scss */
+/* line 2332, ../sass/style.scss */
 .preVideoImg #wrapperInfoMultimedia, .preVideoImg #wrapperAuthorDate {
   width: 290px;
 }
 
-/* line 2334, ../sass/style.scss */
+/* line 2335, ../sass/style.scss */
 .preVideoImg #authorNameMultimedia, .preVideoImg #dateMultimedia {
   text-align: left;
 }
 
-/* line 2337, ../sass/style.scss */
+/* line 2338, ../sass/style.scss */
 .preVideoImg .pipe {
   display: none;
 }
 
-/* line 2340, ../sass/style.scss */
+/* line 2341, ../sass/style.scss */
 .preVideoImg #wrapperPrice {
   width: 275px;
   margin-left: 30px;
 }
 
-/* line 2344, ../sass/style.scss */
+/* line 2345, ../sass/style.scss */
 .preVideoImg .sharethis {
   float: right;
   width: 290px;
   margin-top: 16px;
 }
 
-/* line 2349, ../sass/style.scss */
+/* line 2350, ../sass/style.scss */
 .transcript-content {
   width: 605px;
 }
 
-/* line 2352, ../sass/style.scss */
+/* line 2353, ../sass/style.scss */
 .audioSection .preVideoImg img {
   width: 620px;
   height: 349px;
 }
 
-/* line 2356, ../sass/style.scss */
+/* line 2357, ../sass/style.scss */
 .bookmark {
   float: right;
   width: 117px;
   color: #433a3a;
   font-size: 15px;
 }
-/* line 2361, ../sass/style.scss */
+/* line 2362, ../sass/style.scss */
 .bookmark a {
   color: #433a3a;
 }
 
-/* line 2365, ../sass/style.scss */
+/* line 2366, ../sass/style.scss */
 .flag-message {
   left: -169px !important;
 }
 
 /**start scrollling filter**/
-/* line 2370, ../sass/style.scss */
+/* line 2371, ../sass/style.scss */
 .scrollingTitle {
   background: #fff;
   position: fixed !important;
@@ -3082,12 +3082,12 @@ div.jp-audio {
 }
 
 @media only screen and (max-width: 980px) {
-  /* line 2384, ../sass/style.scss */
+  /* line 2385, ../sass/style.scss */
   .scrollingTitle {
     padding-left: 9 !important;
   }
 }
-/* line 2388, ../sass/style.scss */
+/* line 2389, ../sass/style.scss */
 .scrollingFilter, .scrollingTermDesc, .scrollingView-filters {
   background: url("../images/shadow_local_bar-1.png") repeat-x scroll center bottom rgba(0, 0, 0, 0);
   position: fixed !important;
@@ -3100,13 +3100,13 @@ div.jp-audio {
   z-index: 1400 !important;
 }
 
-/* line 2399, ../sass/style.scss */
+/* line 2400, ../sass/style.scss */
 .scrollingFilter {
   padding-bottom: 10px !important;
   padding-left: 0 !important;
 }
 
-/* line 2403, ../sass/style.scss */
+/* line 2404, ../sass/style.scss */
 .teachingsBarInnerWrapper {
   max-width: 1580px;
   min-width: 940px;
