--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2134,12 +2134,16 @@ div.jp-audio{
     border-top: none;
 }
 .lessonCollectionSection .Audio {
-    //background: url("http://cdn1.kabbalah.com/kabbalah.com/icons/audio_icon.png") no-repeat 8px 0;
-    @include icon-sprite("audio_icon_light_grey") ;
+    background: url("http://cdn1.kabbalah.com/kabbalah.com/icons/audio_icon_light_grey.png") no-repeat 8px 0;
+    //@include icon-sprite("audio_icon_light_grey") ;
     height: 13px;
     width: 25px;
 }
-
+.lessonCollectionSection tr:hover .Audio{
+		background: url("http://cdn1.kabbalah.com/kabbalah.com/icons/audio_icon.png") no-repeat 8px 0;
+    height: 13px;
+    width: 25px;
+} 
 /**grid display***/
 #mainContentWrapper,#courseByParentWrapper {
     clear: both;
