--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -3121,6 +3121,12 @@ div.jp-audio {
 }
 
 /**end scrollling filter**/
+/* line 2414, ../sass/style.scss */
+.theCourseAuthor ~ .tooltipster-base.tooltipster-default.tooltipster-fade.tooltipster-fade-show {
+  left: 33% !important;
+  top: 33% !important;
+}
+
 /* line 1, ../sass/_tooltipster.scss */
 html {
   -webkit-font-smoothing: antialiased;
