--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2411,5 +2411,8 @@ div.jp-audio{
     margin: auto;
 }
 /**end scrollling filter**/
-
+.theCourseAuthor ~ .tooltipster-base.tooltipster-default.tooltipster-fade.tooltipster-fade-show {
+    left: 33% !important;
+    top: 33% !important;
+}
 @import "tooltipster"; // We import the fonts on separate file. The file is called "_tooltipster.scss". 
