--- a/sites/all/themes/ukabbalah/sass/_tooltipster.scss
+++ b/sites/all/themes/ukabbalah/sass/_tooltipster.scss
@@ -299,6 +299,10 @@ a.close-tip{
 	color: #433A3A;
 	font-size: 16px;
 }
+.theCourseAuthor ~ .tooltipster-base.tooltipster-default.tooltipster-fade.tooltipster-fade-show {
+    left: 33% !important;
+    top: 33% !important;
+}
 .tooltipster-base.tooltipster-default.tooltipster-fade.tooltipster-fade-show {
     left: 162px !important;
 }
