--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -3490,7 +3490,7 @@ a.close-tip {
 }
 
 /* line 302, ../sass/_tooltipster.scss */
-.theCourseAuthor ~ .tooltipster-base.tooltipster-default.tooltipster-fade.tooltipster-fade-show {
+#wrapperVideoSection ~ .tooltipster-base.tooltipster-default.tooltipster-fade.tooltipster-fade-show {
   left: 33% !important;
   top: 33% !important;
 }
