--- a/sites/all/themes/ukabbalah/sass/_tooltipster.scss
+++ b/sites/all/themes/ukabbalah/sass/_tooltipster.scss
@@ -304,7 +304,7 @@ a.close-tip{
     top: 33% !important;
 }
 .tooltipster-base.tooltipster-default.tooltipster-fade.tooltipster-fade-show {
-    left: 162px !important;
+    //left: 162px !important;
 }
 @media (max-width: 1000px){
 	.tooltipster-base.tooltipster-default.tooltipster-fade.tooltipster-fade-show {
