--- a/sites/all/themes/ukabbalah/sass/_tooltipster.scss
+++ b/sites/all/themes/ukabbalah/sass/_tooltipster.scss
@@ -299,12 +299,12 @@ a.close-tip{
 	color: #433A3A;
 	font-size: 16px;
 }
-#wrapperVideoSection ~ .tooltipster-base.tooltipster-default.tooltipster-fade.tooltipster-fade-show {
-    left: 33% !important;
-    top: 33% !important;
-}
+// #wrapperVideoSection ~ .tooltipster-base.tooltipster-default.tooltipster-fade.tooltipster-fade-show {
+//     left: 33% !important;
+//     top: 33% !important;
+// }
 .tooltipster-base.tooltipster-default.tooltipster-fade.tooltipster-fade-show {
-    //left: 162px !important;
+    left: 162px !important;
 }
 @media (max-width: 1000px){
 	.tooltipster-base.tooltipster-default.tooltipster-fade.tooltipster-fade-show {
