--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1535,7 +1535,8 @@ h3 {
 #block-views-lesson-collection-block, 
 #block-views-lesson-collection-block-1,
 #block-views-lesson-collection-block-2,
-#block-views-lesson-collection-block-3{
+#block-views-lesson-collection-block-3,
+#block-views-lesson-collection-block-4{
     float:left;
     margin: 44px 0 85px;
     width: 940px;
@@ -1668,7 +1669,8 @@ h3 {
 #block-views-lesson-collection-block .view-filters,
 #block-views-lesson-collection-block-1 .view-filters,
 #block-views-lesson-collection-block-2 .view-filters,
-#block-views-lesson-collection-block-3 .view-filters {
+#block-views-lesson-collection-block-3 .view-filters,
+#block-views-lesson-collection-block-4 .view-filters {
     float: right;
     margin-top: -88px; 
 }
