--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2382,9 +2382,9 @@ div.jp-audio{
     top: 0;
     margin: 0!important;
     padding-left: 0!important;
-    width: 100%;
-    min-width: 100%!important;
-    max-width: 100%!important;
+    // width: 100%;
+    // min-width: 100%!important;
+    // max-width: 100%!important;
     z-index: 1400 !important;
 }
 @media only screen and (max-width: 980px){
@@ -2397,9 +2397,9 @@ div.jp-audio{
     position: fixed !important;
     z-index: 140;
     top: 46px;
-    width: 100%;
-    min-width: 100%!important;
-    max-width: 100%!important;
+    // width: 100%;
+    // min-width: 100%!important;
+    // max-width: 100%!important;
     margin: auto;
     z-index: 1400 !important;
 }
