--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -3084,6 +3084,7 @@ div.jp-audio {
   top: 0;
   margin: 0 !important;
   padding-left: 0 !important;
+  width: 100% !important;
   z-index: 1400 !important;
 }
 
@@ -3099,6 +3100,7 @@ div.jp-audio {
   position: fixed !important;
   z-index: 140;
   top: 46px;
+  width: 100% !important;
   margin: auto;
   z-index: 1400 !important;
 }
