--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2382,7 +2382,7 @@ div.jp-audio{
     top: 0;
     margin: 0!important;
     padding-left: 0!important;
-    // width: 100%;
+    width: 100%!important;
     // min-width: 100%!important;
     // max-width: 100%!important;
     z-index: 1400 !important;
@@ -2397,7 +2397,7 @@ div.jp-audio{
     position: fixed !important;
     z-index: 140;
     top: 46px;
-    // width: 100%;
+    width: 100%!important;
     // min-width: 100%!important;
     // max-width: 100%!important;
     margin: auto;
