--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -3088,7 +3088,7 @@ div.jp-audio {
   z-index: 1400 !important;
 }
 
-@media only screen and (min-width: 980px) {
+@media only screen and (max-width: 1000px) {
   /* line 2391, ../sass/style.scss */
   .scrollingTitle {
     padding-left: 20 !important;
