--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -3089,12 +3089,13 @@ div.jp-audio {
 }
 
 @media only screen and (max-width: 1000px) {
-  /* line 2391, ../sass/style.scss */
-  .scrollingTitle {
-    padding-left: 20 !important;
+  /* line 2392, ../sass/style.scss */
+  .scrollingTitle,
+  .scrollingFilter {
+    padding-left: 20px !important;
   }
 }
-/* line 2395, ../sass/style.scss */
+/* line 2396, ../sass/style.scss */
 .scrollingFilter, .scrollingTermDesc, .scrollingView-filters {
   background: url("../images/shadow_local_bar-1.png") repeat-x scroll center bottom rgba(0, 0, 0, 0);
   position: fixed !important;
@@ -3105,20 +3106,20 @@ div.jp-audio {
   z-index: 1400 !important;
 }
 
-/* line 2406, ../sass/style.scss */
+/* line 2407, ../sass/style.scss */
 .scrollingFilter {
   padding-bottom: 10px !important;
   padding-left: 0 !important;
 }
 
-/* line 2410, ../sass/style.scss */
+/* line 2411, ../sass/style.scss */
 .teachingsBarInnerWrapper {
   max-width: 1580px;
   min-width: 940px;
   margin: auto;
 }
 
-/* line 2416, ../sass/style.scss */
+/* line 2417, ../sass/style.scss */
 .scrollingTitle .teachingsBarInnerWrapper,
 .scrollingFilter .teachingsBarInnerWrapper {
   width: auto !important;
