--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2388,8 +2388,9 @@ div.jp-audio{
     z-index: 1400 !important;
 }
 @media only screen and (max-width: 1000px){
-	.scrollingTitle{
-		padding-left: 20!important;
+	.scrollingTitle,
+	.scrollingFilter{
+		padding-left: 20px!important;
 	}
 }
 .scrollingFilter,.scrollingTermDesc,.scrollingView-filters {
