--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2393,7 +2393,7 @@ div.jp-audio{
 	}
 }
 
-@media only screen and (max-width: 940px){
+@media only screen and (min-width: 1000px){
 	.scrollingFilter{
 		padding-left: 20px!important;
 	}
