--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2414,7 +2414,7 @@ div.jp-audio{
 }
 .scrollingFilter{
   padding-bottom:10px!important;
-  padding-left:0!important;
+  //padding-left:0!important;
 }
 .teachingsBarInnerWrapper{
     max-width: 1580px;
