--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1794,6 +1794,15 @@ h3 {
     width: 32px;
     height: 32px;
 }
+.activeLesson .Video{
+	background: url(http://cdn1.kabbalah.com/university/icons/icon_video_dark_grey.png) no-repeat 8px 6px;
+}
+.activeLesson .Audio{
+	background: url("http://cdn1.kabbalah.com/kabbalah.com/icons/audio_icon.png") no-repeat 8px 0;
+}
+.activeLesson .views-field-twistage-subtitles span, .subtitle-width span{
+     background: url(http://cdn1.kabbalah.com/university/icons/cc_icon_dark_grey.png) no-repeat 8px 9px;
+      }
 .views-field-twistage-subtitles span,
 .subtitle-width span{
     background: url(http://cdn1.kabbalah.com/university/icons/cc_icon_light_grey.png) no-repeat 8px 9px;
