--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1803,11 +1803,9 @@ h3 {
 .activeLesson .views-field-twistage-subtitles span, .subtitle-width span{
      background: url(http://cdn1.kabbalah.com/university/icons/cc_icon_dark_grey.png) no-repeat 8px 9px;
       }
-.views-field-twistage-subtitles span,
-.subtitle-width span{
-    background: url(http://cdn1.kabbalah.com/university/icons/cc_icon_light_grey.png) no-repeat 8px 9px;
-    color: transparent;
-}
+.views-field-twistage-subtitles span, .subtitle-width span{
+     background: url(http://cdn1.kabbalah.com/university/icons/cc_icon_dark_grey.png) no-repeat 8px 9px;
+      }
 .lessonCollectionSection tr:hover{
 	font-weight: bold;
 	background: #e1edf1;
