--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1805,6 +1805,7 @@ h3 {
       }
 .views-field-twistage-subtitles span, .subtitle-width span{
      background: url(http://cdn1.kabbalah.com/university/icons/cc_icon_dark_grey.png) no-repeat 8px 9px;
+      color:transparent;
       }
 .lessonCollectionSection tr:hover{
 	font-weight: bold;
