--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1794,10 +1794,10 @@ h3 {
     width: 32px;
     height: 32px;
 }
-.activeLesson span .Video{
+.activeLesson .Video{
 	background: url(http://cdn1.kabbalah.com/university/icons/icon_video_dark_grey.png) no-repeat 8px 6px!important;
 }
-.activeLesson span .Audio{
+.activeLesson .Audio{
 	background: url("http://cdn1.kabbalah.com/kabbalah.com/icons/audio_icon.png") no-repeat 8px 0!important;
 }
 .activeLesson .views-field-twistage-subtitles span, .activeLesson .subtitle-width span{
