--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1800,7 +1800,7 @@ h3 {
 .activeLesson .Audio{
 	background: url("http://cdn1.kabbalah.com/kabbalah.com/icons/audio_icon.png") no-repeat 8px 0!important;
 }
-.activeLesson .views-field-twistage-subtitles span, .activeLesson .subtitle-width span{
+ .views-field-twistage-subtitles .activeLesson span,  .subtitle-width .activeLesson span{
      background: url(http://cdn1.kabbalah.com/university/icons/cc_icon_dark_grey.png) no-repeat 8px 9px!important;
       color: transparent
       }
