--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1803,7 +1803,7 @@ h3 {
  .views-field-twistage-subtitles.activeLesson span, td .subtitle-width.activeLesson span{
      //background: url(http://cdn1.kabbalah.com/university/icons/cc_icon_dark_grey.png) no-repeat 8px 9px!important;
       color: transparent;
-      background:red;
+      background:#ff000!important;
       }
 .views-field-twistage-subtitles span,
 .subtitle-width span{
