--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2299,6 +2299,9 @@ div.jp-audio{
     @include icon-sprite("media");
     width: 35px;
 }
+.Both{
+	@extend .bothAdVdImg;
+}
 .theTitle,.titleWrapper {
     float: left;
     margin-left: 10px;
