--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -682,13 +682,30 @@ span.jsonTitle {
     padding-bottom: 10px;
     color: $colorBrown;
     display: inline-block;
-}
-.teachingsTopicAndDate{
-  width: 286px;
+    widows: auto;
 }
 .theDate {
     @extend .teachingsTopicAndDate;
-    width: auto;
+}
+/*** adding icon for free lesson ***/
+
+.Free:before{
+    color: #FFFFFF;
+    content: "FREE";
+    font-size: 11px;
+    font-weight: bold;
+} 
+.Free{
+    background: #808080;
+    border-radius: 3px;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1) inset;
+    float: right;
+    height: 18px;
+    line-height: 14px;
+    margin-right: 10px;
+    text-align: center;
+    text-shadow: 0 -1px 0 #5E5D5D;
+    width: 39px;
 }
 .teaser {
     color: $colorBrown;
