--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -711,6 +711,9 @@ span.jsonTitle {
     text-shadow: 0 -1px 0 #5E5D5D;
     width: 39px;
 }
+.teachingsTopicAndDate .Free{
+  line-height: 17px;
+}
 .teaser {
     color: $colorBrown;
     display: block;
