--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1520,7 +1520,7 @@ h3 {
 .accordion {
     float: left;
 }
-.accordion p:first-child{
+.accordion p:first-child,.accordion ul{
   margin-top: 0;
 }
 
